// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPickerBody should be rendered correctly 1`] = `
<div
  className="root size-36 background-white body undefined container align-items-center"
  style={
    Object {
      "maxHeight": undefined,
    }
  }
>
  <div
    className="no-found-size-36"
    onClick={[Function]}
    style={
      Object {
        "alignSelf": undefined,
        "flexBasis": "0",
        "flexGrow": 1,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": "center",
      }
    }
  >
    <div
      className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
    >
      No records found
    </div>
  </div>
</div>
`;

exports[`DataPickerBody should be rendered correctly 2`] = `
<div
  className="root size-36 background-white body undefined container align-items-center"
  style={
    Object {
      "maxHeight": undefined,
    }
  }
>
  <div>
    Not found
  </div>
</div>
`;

exports[`DataPickerBody should be rendered correctly 3`] = `
Array [
  <div
    className="searchWrapper search-size-48"
  >
    <div
      className=""
      onClick={[Function]}
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "0",
          "flexGrow": 1,
          "flexShrink": undefined,
          "minWidth": 0,
          "textAlign": undefined,
        }
      }
    >
      <div
        className="container uui-input-box -clickable root size-48 mode-form search"
        onBlur={[Function]}
        onFocus={[Function]}
        tabIndex={-1}
      >
        <div
          className="container uui-icon uui-enabled"
        >
          <svg
            className=""
            height={24}
            viewBox="0 0 12 24"
            width={12}
          >
            <use
              xlinkHref="#search-24.svg"
            />
          </svg>
        </div>
        <input
          className="uui-input"
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="Search"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>,
  <div
    className="root size-36 background-white body modal container align-items-center"
    style={
      Object {
        "maxHeight": 800,
      }
    }
  >
    <div
      className="wrapper root"
    >
      <div
        className="os-host"
        style={
          Object {
            "height": 800,
            "width": "100%",
          }
        }
      >
        <div
          className="os-resize-observer-host"
        />
        <div
          className="os-padding"
        >
          <div
            className="os-viewport"
          >
            <div
              className="os-content"
            >
              <div
                className="container2"
                style={
                  Object {
                    "minHeight": null,
                  }
                }
              >
                <div
                  className="container3"
                  style={
                    Object {
                      "marginTop": 0,
                    }
                  }
                >
                  <div
                    className="pickerRow container align-items-center"
                  >
                    <div
                      className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                      onClick={[Function]}
                      style={
                        Object {
                          "alignSelf": undefined,
                          "flexBasis": "0",
                          "flexGrow": 1,
                          "flexShrink": undefined,
                          "minWidth": 0,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="pickerRow container align-items-center"
                  >
                    <div
                      className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                      onClick={[Function]}
                      style={
                        Object {
                          "alignSelf": undefined,
                          "flexBasis": "0",
                          "flexGrow": 1,
                          "flexShrink": undefined,
                          "minWidth": 0,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="pickerRow container align-items-center"
                  >
                    <div
                      className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                      onClick={[Function]}
                      style={
                        Object {
                          "alignSelf": undefined,
                          "flexBasis": "0",
                          "flexGrow": 1,
                          "flexShrink": undefined,
                          "minWidth": 0,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="pickerRow container align-items-center"
                  >
                    <div
                      className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                      onClick={[Function]}
                      style={
                        Object {
                          "alignSelf": undefined,
                          "flexBasis": "0",
                          "flexGrow": 1,
                          "flexShrink": undefined,
                          "minWidth": 0,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="pickerRow container align-items-center"
                  >
                    <div
                      className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                      onClick={[Function]}
                      style={
                        Object {
                          "alignSelf": undefined,
                          "flexBasis": "0",
                          "flexGrow": 1,
                          "flexShrink": undefined,
                          "minWidth": 0,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="pickerRow container align-items-center"
                  >
                    <div
                      className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                      onClick={[Function]}
                      style={
                        Object {
                          "alignSelf": undefined,
                          "flexBasis": "0",
                          "flexGrow": 1,
                          "flexShrink": undefined,
                          "minWidth": 0,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="pickerRow container align-items-center"
                  >
                    <div
                      className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                      onClick={[Function]}
                      style={
                        Object {
                          "alignSelf": undefined,
                          "flexBasis": "0",
                          "flexGrow": 1,
                          "flexShrink": undefined,
                          "minWidth": 0,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="pickerRow container align-items-center"
                  >
                    <div
                      className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                      onClick={[Function]}
                      style={
                        Object {
                          "alignSelf": undefined,
                          "flexBasis": "0",
                          "flexGrow": 1,
                          "flexShrink": undefined,
                          "minWidth": 0,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="pickerRow container align-items-center"
                  >
                    <div
                      className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                      onClick={[Function]}
                      style={
                        Object {
                          "alignSelf": undefined,
                          "flexBasis": "0",
                          "flexGrow": 1,
                          "flexShrink": undefined,
                          "minWidth": 0,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="pickerRow container align-items-center"
                  >
                    <div
                      className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                      onClick={[Function]}
                      style={
                        Object {
                          "alignSelf": undefined,
                          "flexBasis": "0",
                          "flexGrow": 1,
                          "flexShrink": undefined,
                          "minWidth": 0,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="pickerRow container align-items-center"
                  >
                    <div
                      className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                      onClick={[Function]}
                      style={
                        Object {
                          "alignSelf": undefined,
                          "flexBasis": "0",
                          "flexGrow": 1,
                          "flexShrink": undefined,
                          "minWidth": 0,
                          "textAlign": undefined,
                        }
                      }
                    >
                      <div
                        className="renderItem"
                      >
                        <div />
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="os-scrollbar os-scrollbar-horizontal "
        >
          <div
            className="os-scrollbar-track"
          >
            <div
              className="os-scrollbar-handle"
            />
          </div>
        </div>
        <div
          className="os-scrollbar os-scrollbar-vertical"
        >
          <div
            className="os-scrollbar-track"
          >
            <div
              className="os-scrollbar-handle"
            />
          </div>
        </div>
        <div
          className="os-scrollbar-corner"
        />
      </div>
      <div
        className="uui-scroll-shadow-top"
      />
      <div
        className="uui-scroll-shadow-bottom"
      />
    </div>
  </div>,
]
`;
